#21 Fix automation mistakes because mentor comments. Also fix placeholder for Forefox and ie bug with hheight and align-items

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -634,6 +634,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
   min-height: 103px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -1695,6 +1696,7 @@ body {
     width: 50%;
   }
   .catalog-parts__link {
+    height: 100%;
     min-height: 119px;
     padding-right: 36px;
     padding-left: 36px;
@@ -1864,7 +1866,6 @@ body {
   }
   .form-order__fieldset {
     position: relative;
-    display: flex;
     padding-top: 0;
     border: none;
   }
@@ -1957,19 +1958,15 @@ body {
   }
   .form-order__text::-webkit-input-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text::-moz-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text:-ms-input-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text::placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text {
     font-size: 19px;
@@ -1981,19 +1978,15 @@ body {
   }
   .form-order__text--contacts::-webkit-input-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text--contacts::-moz-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text--contacts:-ms-input-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text--contacts::placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__text--contacts {
     padding-left: 17px;
@@ -2001,19 +1994,15 @@ body {
   }
   .form-order__textarea::-webkit-input-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__textarea::-moz-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__textarea:-ms-input-placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__textarea::placeholder {
     font-size: 19px;
-    line-height: 19px;
   }
   .form-order__textarea {
     font-size: 19px;
@@ -3194,19 +3183,15 @@ body {
   }
   .form-order__text::-webkit-input-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text::-moz-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text:-ms-input-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text::placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text {
     font-size: 17px;
@@ -3214,35 +3199,27 @@ body {
   }
   .form-order__text--contacts::-webkit-input-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text--contacts::-moz-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text--contacts:-ms-input-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__text--contacts::placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__textarea::-webkit-input-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__textarea::-moz-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__textarea:-ms-input-placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__textarea::placeholder {
     font-size: 17px;
-    line-height: 18px;
   }
   .form-order__textarea {
     font-size: 17px;
