--- a/src/less/components/catalog-parts.less
+++ b/src/less/components/catalog-parts.less
@@ -106,6 +106,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%;
     min-height: @catalogPartsMinHeight;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -114,6 +115,7 @@
     color: @linkColor;
 
     @media @tablet {
+      height: 100%;
       min-height: @catalogPartsTabletMinHeight;
       padding-right: 36px;
       padding-left: 36px;
