--- a/src/less/utils/mixins.less
+++ b/src/less/utils/mixins.less
@@ -123,12 +123,10 @@
 
     @media @mobileOnly {
       font-size: 17px;
-      line-height: 18px;
     }
 
     @media @tablet {
       font-size: 19px;
-      line-height: 19px;
     }
   }
 }
